--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "svix": "^1.81.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
