--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.37.5",
+    "firebase": "^12.9.0",
     "mongodb": "^7.0.0",
     "mongoose": "^8.19.3",
     "next": "^15.5.12",
